--- a/src/app/edit-item-modal/edit-item-modal.component.html
+++ b/src/app/edit-item-modal/edit-item-modal.component.html
@@ -1,2 +1,2 @@
-<h1 class="title">Editer</h1>
-<app-add-item-form [item]="item" (formSubmit)="onSubmitted($event)"> </app-add-item-form>
+<h1 class="title">Edit</h1>
+<app-add-item-form [item]="item" (formSubmit)="onSubmitted($event)"></app-add-item-form>
